--- a/main.css
+++ b/main.css
@@ -1,15 +1,15 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Gentium Plus", sans-serif;
 }
 
-body{
-    background-color: #f5cf844d;
+body {
+    background-color: #f5cf8405;
 }
 
-header{
+header {
     background-color: #84B1F5;
     padding: 1em;
     position: sticky;
@@ -19,34 +19,43 @@ header{
 }
 
 header h1 {
-    font-weight: bolder;
-    font-size: 6em;
+    font-weight: bold;
+    font-size: 3em;
 }
 
-.nav-link{
+.nav-link {
     font-weight: bold;
-    font-size: 1.5em;
+    font-size: 1.3em;
     color: #000;
     text-align: center;
     margin-top: 1em;
 }
 
-.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active{
-    background-color: #8CF584;
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
+    background-color: #DAF584;
     border: none;
-    color: #f70b98;
+    color: #162133;
 }
 
 .carousel-inner {
     height: 33em;
 }
 
-section{
+section {
+    max-height: 100vh;
     height: 100vh;
     padding-top: 10em;
 }
 
-.card-container{
+section h2{
+    font-weight: bold;
+    text-transform: uppercase;
+    font-style: italic;
+    margin-bottom: 1em;
+}
+
+.card-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -54,26 +63,470 @@ section{
 
 .card {
     width: 30vw;
-    height: 60vh; 
+    height: 60vh;
     overflow: hidden;
-    margin-top: 2em;
     background-color: #f5cf8405
 }
 
 .card-img-top {
-    width: 100%; 
-    height: 50%; 
+    width: 100%;
+    height: 50%;
     object-fit: cover;
     transition: all 1.5s ease;
 }
 
-.card:hover{
+.card:hover {
     cursor: pointer;
-    border: solid 2px #5B7559;
+    border: solid 3px #8F9EB5;
 }
 
-.card-img-top:hover{
-    transform: scale(1.2);
+.card-img-top:hover {
+    transform: scale(1.1);
 }
 
+.container-sobre{
+    display: flex;
+    max-height: 100vh;
+}
 
+.container-sobre picture img{
+    width: 100%;
+    height: 100%;
+    padding-right: 2em;
+}
+
+#sobre p{
+    width: 100%;
+    font-size: 1.3em;
+}
+
+.accordion-button.collapsed{
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #000;
+    height: 5.5em;
+}
+
+.accordion-button:not(.collapsed){
+    background-color: #84B1F5;
+    color: #000;
+    font-weight: bold;
+    text-transform: uppercase;
+    height: 5.5em;
+}
+
+.accordion-button:focus {
+    box-shadow: 0 0 0 0.20rem #8F9EB5;
+}
+
+.accordion-body{
+    font-weight: bold;
+}
+
+form{
+    width: 50%;
+}
+
+form input{
+    margin-bottom: 0.5em;
+    font-weight: bold;
+}
+
+.form-check {
+    margin: 0.5em auto;
+}
+
+.form-control:focus{
+    box-shadow: 0 0 0 0.10rem #8F9EB5;
+}
+
+textarea{
+    resize: none;
+    height: 12em;
+}
+
+footer{
+    background-color: #84B1F5;
+    padding: 1em;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 1em ;
+    align-items: center;
+    margin-top: 2.5em;
+}
+
+@media screen and (max-width: 767px){
+    header h1 {
+        font-size: 2em;
+    }
+
+    .carousel-inner {
+        height: 10em;
+        width: 100%;
+    }
+
+    section {
+        max-height: 145vh;
+        height: 145vh;
+        padding-top: 1em;
+    }
+    
+    section h2{
+        font-weight: bold;
+        text-transform: uppercase;
+        font-style: italic;
+        margin: 1em;
+    }
+    
+    .card-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    
+    .card {
+        width: 60vw;
+        height: 40vh;
+        overflow: hidden;
+        background-color: #f5cf8405;
+        margin-bottom: 2em;
+    }
+
+    .card-title{
+        font-size: 1.5em;
+        font-weight: bold;
+    }
+
+    .card-text{
+        font-size: 0em;
+    }
+
+    .container-sobre{
+        display: block;
+        max-height: 145vh;
+    }
+
+    .container-sobre picture img{
+        width: 80%;
+        height: 100%;
+        padding-right: 0em;
+        margin: 0 10% 0 10% ;
+    }
+    
+    #sobre p{
+        width: 80%;
+        font-size: 1.2em;
+        margin: 1.5em 10% 0 10% ;
+    }
+
+    .accordion{
+        max-width: 80%;
+        width: 80%;
+        margin: 0 10% 0 10% ;
+    }
+
+    .accordion-button.collapsed{
+        height: 9.5em;
+    }
+    
+    .accordion-button:not(.collapsed){
+        height: 5em;
+    }
+
+    form{
+        width: 80%;
+        margin: 10% 10% 0 10% ;
+        height: 100%;
+    }
+
+    form input{
+        margin-bottom: 2em;
+        font-weight: bold;
+    }
+    
+    textarea{
+        resize: none;
+        height: 25em;
+    }
+
+    footer{
+        padding: 2.2em;
+        font-size: 1em ;
+        margin-top: 0em;
+    }
+    
+}
+
+@media screen and (min-width:768px) and (max-width: 1023px) {
+    header h1 {
+        font-size: 3em;
+    }
+
+    .carousel-inner {
+        height: 20em;
+        width: 100%;
+    }
+
+    section {
+        max-height: 100vh;
+        height: 100vh;
+        padding-top: 1em;
+    }
+    
+    section h2{
+        font-weight: bold;
+        text-transform: uppercase;
+        font-style: italic;
+        margin: 1em;
+        font-size: 3em;
+    }
+
+    .card {
+        width: 60vw;
+        height: 40vh;
+        overflow: hidden;
+        background-color: #f5cf8405;
+        margin-bottom: 2em;
+    }
+
+    .card-title{
+        font-size: 1.5em;
+        font-weight: bold;
+    }
+
+    .card-text{
+        font-size: 1em;
+    }
+
+    .container-sobre{
+        display: flex;
+        max-height: 80vh;
+        height: 80vh;
+    }
+    
+    .container-sobre picture img{
+        width: 100%;
+        height: 100%;
+        padding-right: 2em;
+        object-fit: cover;
+    }
+    
+    #sobre p{
+        width: 100%;
+        font-size: 1.3em;
+    }
+
+    .accordion{
+        max-width: 80%;
+        width: 80%;
+        margin: 0 10% 0 10% ;
+    }
+
+    .accordion-button.collapsed{
+        height: 10em;
+    }
+    
+    .accordion-button:not(.collapsed){
+        height: 9em;
+    }
+
+    form{
+        width: 80%;
+        margin: 10% 10% 0 10% ;
+        height: 100%;
+    }
+
+    form input{
+        margin-bottom: 2em;
+        font-weight: bold;
+    }
+    
+    textarea{
+        resize: none;
+        height: 25em;
+    }
+
+    footer{
+        padding: 5em;
+        font-size: 1em ;
+        margin-top: 0em;
+    }
+    
+}
+
+@media screen and (orientation: landscape) and (max-width: 767px){
+
+    .carousel-inner {
+        height:15em;
+        width: 100%;
+    }
+
+    section {
+        max-height: 230vh;
+        height: 230vh;
+        padding-top: 1em;
+    }
+    
+    section h2{
+        font-weight: bold;
+        text-transform: uppercase;
+        font-style: italic;
+        margin: 1em;
+    }
+    
+    .card {
+        width: 60vw;
+        height: 60vh;
+        overflow: hidden;
+        background-color: #f5cf8405;
+        margin-bottom: 2em;
+    }
+
+    .card-title{
+        font-size: 1.5em;
+        font-weight: bold;
+    }
+
+    .card-text{
+        font-size: 0em;
+    }
+
+    .container-sobre{
+        display: block;
+        max-height: 145vh;
+    }
+
+    .container-sobre picture img{
+        width: 80%;
+        height: 100%;
+        padding-right: 0em;
+        margin: 0 10% 0 10% ;
+    }
+    
+    #sobre p{
+        width: 80%;
+        font-size: 1.2em;
+        margin: 1.5em 10% 0 10% ;
+    }
+
+    .accordion{
+        max-width: 80%;
+        width: 80%;
+        margin: 0 10% 0 10% ;
+    }
+
+    .accordion-button.collapsed{
+        height: 7.5em;
+    }
+    
+    .accordion-button:not(.collapsed){
+        height: 7.5em;
+    }
+
+    form{
+        width: 80%;
+        margin: 10% 10% 0 10% ;
+        height: 100%;
+    }
+
+    form input{
+        margin-bottom: 1em;
+        font-weight: bold;
+    }
+    
+    textarea{
+        resize: none;
+        height: 25em;
+    }
+
+    footer{
+        padding: 2.5em;
+        font-size: 1em ;
+        margin-top: 0em;
+    }
+    
+}
+
+@media screen and (orientation: landscape) and (min-width:768px) and (max-width: 1023px) {
+    .carousel-inner {
+        height: 19em;
+        width: 100%;
+    }
+
+    section {
+        max-height: 230vh;
+        height: 230vh;
+        padding-top: 1em;
+    }
+    
+    section h2{
+        font-weight: bold;
+        text-transform: uppercase;
+        font-style: italic;
+        margin: 1em;
+        font-size: 2em;
+    }
+
+    .card {
+        width: 100vw;
+        height: 100vh;
+        overflow: hidden;
+        background-color: #f5cf8405;
+        margin-bottom: 2em;
+    }
+
+    .container-sobre{
+        display: block;
+        max-height: 100vh;
+        height: 100vh;
+    }
+    
+    .container-sobre picture img{
+        width: 100%;
+        height: 100%;
+        padding-right: 2em;
+        object-fit: cover;
+    }
+    
+    #sobre p{
+        width: 100%;
+        font-size: 1.4em;
+        margin-top: 2em;
+    }
+
+    .accordion{
+        max-width: 80%;
+        width: 80%;
+        margin: 0 10% 0 10% ;
+    }
+
+    .accordion-button.collapsed{
+        height: 9.5em;
+    }
+    
+    .accordion-button:not(.collapsed){
+        height: 9em;
+    }
+
+    form{
+        width: 80%;
+        margin: 10% 10% 0 10% ;
+        height: 100%;
+    }
+
+    form input{
+        margin-bottom: 2em;
+        font-weight: bold;
+    }
+    
+    textarea{
+        resize: none;
+        height: 25em;
+    }
+
+    footer{
+        padding: 5em;
+        font-size: 1em ;
+        margin-top: 0em;
+    }
+}
